--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,9 @@
         <li class="active">
         	<%=link_to "New Tweet", new_tweet_path %>	
         </li>
-        <li><a href="#">Link</a></li>
+        <li class="active">
+        <%=link_to "All Tweets", tweets_path %>	
+        </li>
       </ul>
       </form>
       <ul class="nav navbar-nav navbar-right">
