assigned users to tweets

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
 
 <div class='container'>
 	<% if user_signed_in? %>
-		The user is signed in
+		Welcome!
 	<% else %>
 		The user is not signed in
 	<% end %>
