--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,12 +29,13 @@
 	        	<%=link_to "New Tweet", new_tweet_path %>	
 	        </li>
 	        <li class="active">
-	        <%=link_to "All Tweets", tweets_path %>	
+	        	<%=link_to "All Tweets", tweets_path %>	
 	        </li>
 	      </ul>
-	    <% end %> 
-	      </form>
+	    <% end %>
+
 	      <ul class="nav navbar-nav navbar-right">
+
         <li>
 			<% if user_signed_in? %>
 				<%=link_to "Log Out", destroy_user_session_path, method: :delete %>
@@ -42,10 +43,16 @@
 				<%=link_to "Sign In", new_user_session_path %>
 			<% end %>
         </li>
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
+          	<% if user_signed_in? && current_user.profile %>
+          		<li>
+            		<%= link_to "My Profile", profile_path(current_user.profile) %>
+            	</li>
+            <% end %>
+
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li class="divider"></li>
@@ -59,7 +66,7 @@
 
 <div class='container'>
 	<% if user_signed_in? %>
-		Welcome <%= current_user.email %>!
+		Welcome <%= current_user.profile.first_name %>!
 	<% else %>
 		The user is not signed in
 	<% end %>
