added profile pictures

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
 
 <div class='container'>
 	<% if user_signed_in? %>
-		Welcome <%= current_user.profile.first_name %>!
+		Welcome
 	<% else %>
 		The user is not signed in
 	<% end %>
