--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,2 +1,7 @@
+<br/>
+<%= image_tag @profile.picture, style: 'height: 300px;' %>
+
+<br/>
 <%= @profile.first_name %>
+<br/>
 <%= @profile.description %>
