--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -4,8 +4,10 @@
 	  		<li class="list-group-item">
 				<%= tweet.content %> | <%= link_to tweet.user.profile.first_name, profile_path(tweet.user.profile) %>
 				<% if current_user.following?(tweet.user) %>	
-					<button type="button" class="btn btn-danger"> Already Following
-					</button>
+						<%= simple_form_for :follows, url: follow_path(tweet.user.id), method: :delete do |f| %>
+						<%= f.input :user, as: :hidden, input_html: {value: tweet.user.id} %>
+						<%= f.button :submit, value: 'Unfollow', class: 'btn btn-large btn-danger' %>
+						<% end %>
 				<% else %>	
 					<%= simple_form_for :follows, url: follows_path do |f| %>
 						<%= f.input :user, as: :hidden, input_html: {value: tweet.user.id} %>
