--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<nav class="navbar navbar-default">
+
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
+
+
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
@@ -44,39 +46,40 @@
 			<% end %>
         </li>
 
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-          	<% if user_signed_in? && current_user.profile %>
-          		<li>
+        <li>
+          <% if user_signed_in? && current_user.profile %>
+          	<li>
             		<%= link_to "My Profile", profile_path(current_user.profile) %>
-            	</li>
-            <% end %>
-
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
+            </li>
+          <% else %>
+            <li>
+                <%= link_to "Sign Up", new_user_registration_path %>
+            </li>  
+          <% end %>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class='container'>
-	<% if user_signed_in? %>
-		Welcome
-	<% else %>
-		The user is not signed in
-	<% end %>
-	<%flash.each do |key,value| %>
-		<div class="alert alert-<%=key%>">
-			<%=value%>
-		</div>
-	<% end %>
-	<%= yield %>
-</div>
+
+<% if params[:action] == 'main_page' %>
+   <% flash.each do |key,value| %>
+    <div class="alert alert-<%=key%>">
+      <%=value%>
+    </div>
+  <% end %>
+  <%= yield %>
+<% else %>
+  <div class='container' style='margin-top: 60px;'>
+  	<% flash.each do |key,value| %>
+  		<div class="alert alert-<%=key%>">
+  			<%=value%>
+  		</div>
+  	<% end %>
+  	<%= yield %>
+  </div>
+<% end %>  
 
 </body>
 </html>
